--- a/app/render/css/index.css
+++ b/app/render/css/index.css
@@ -25,3 +25,10 @@ body{
   text-align: left;
   overflow-y: auto;
 }
+#open {
+  font-size: 12px;
+  text-align: left;
+  color: #000;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.466);
+}
